Add DNS client cache and use it for connection PTR as well